Fixed window size and further improved compatibility.